fix(cropping): Display checkered background on croppered image even before it is loaded

--- a/resources/style.scss
+++ b/resources/style.scss
@@ -113,8 +113,10 @@
         text-transform: capitalize;
     }
 }
-.cropper .jcrop-active>img {
-	@include checkered();
+.cropper {
+    &>img, .jcrop-active>img {
+        @include checkered();
+    }
 }
 
 
